<resources>
    <string name="app_name">Delivery</string>
    <string name="menu">Меню</string>
    <string name="account">Профиль</string>
    <string name="trash">Корзина</string>
    <string name="pizza">Пицца</string>
    <string name="burger">Бургеры</string>
    <string name="sushi">Суши</string>
    <string name="drinks">Напитки</string>
    <string name="deserts">Десерты</string>
    <string name="foodimage">foodImage</string>
    <string name="price">от 350 руб.</string>
    <string name="ad">advertisment</string>
    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
    </string-array>
</resources>