<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/cities"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/foodimage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_qr_code_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liftOnScroll="true">


                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        app:layout_scrollFlags="scroll|enterAlways|snap">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="10dp"
                                app:cardCornerRadius="20dp">

                                <ImageView
                                    android:layout_width="300dp"
                                    android:contentDescription="@string/ad"
                                    android:layout_height="150dp"
                                    android:background="@drawable/ad_shape"
                                    app:srcCompat="@drawable/ad_1" />
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                app:cardCornerRadius="20dp">

                                <ImageView
                                    android:contentDescription="@string/ad"
                                    android:layout_width="300dp"
                                    android:layout_height="150dp"
                                    android:background="@drawable/ad_shape"
                                    app:srcCompat="@drawable/ad_2" />
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                app:cardCornerRadius="20dp">

                                <ImageView
                                    android:contentDescription="@string/ad"
                                    android:layout_width="300dp"
                                    android:layout_height="150dp"
                                    android:background="@drawable/ad_shape"
                                    app:srcCompat="@drawable/ad_3" />
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </HorizontalScrollView>


                </com.google.android.material.appbar.CollapsingToolbarLayout>

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_scrollFlags="scroll|enterAlways|snap">

                        <Button
                            android:id="@+id/pizzaButton"
                            android:layout_width="130dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/menu_button_shape"
                            android:enabled="false"
                            android:text="@string/pizza"
                            android:textColor="@color/disabledButtonTextColor"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/hamburgerButton"
                            android:layout_width="130dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/menu_button_shape"

                            android:text="@string/burger"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/sushiButton"
                            android:layout_width="130dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/menu_button_shape"

                            android:text="@string/sushi"
                            android:textSize="20sp" />

                        <Button

                            android:id="@+id/drinksButton"
                            android:layout_width="130dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/menu_button_shape"

                            android:text="@string/drinks"
                            android:textSize="20sp" />

                        <Button

                            android:id="@+id/desertsButton"
                            android:layout_width="130dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/menu_button_shape"

                            android:text="@string/deserts"
                            android:textSize="20sp" />

                    </LinearLayout>
                </HorizontalScrollView>
            </com.google.android.material.appbar.AppBarLayout>


            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/recyclerViewRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".presentation.ui.MainActivity">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/menuItemsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>